
confdir = $(sysconfdir)/singularity/
completiondir = $(sysconfdir)/bash_completion.d/
defaultsdir = $(libexecdir)/singularity/defaults/

dist_conf_DATA = default-nsswitch.conf singularity.conf init
dist_completion_DATA =  bash_completion.d/singularity
dist_defaults_DATA = defaults/environment defaults/shell defaults/exec defaults/run


MAINTAINERCLEANFILES = Makefile.in
