SUBDIRS = mods install_deps

scriptlibexecdir = $(libexecdir)/singularity

dist_scriptlibexec_SCRIPTS = functions sexec_prep \
	build.exec build.help build.summary \
	delete.exec delete.help delete.summary \
	list.exec list.help list.summary \
	help.exec help.help help.summary \
	install.exec install.help install.summary \
	run.exec run.help run.summary \
	test.exec test.summary

#dist_scriptlibexec_SCRIPTS = functions sapp_build sapp_build_base sapp_build_deps_libs sapp_build_archive sapp_run sapp_run_explode sapp_run_check

MAINTAINERCLEANFILES = Makefile.in

