SUBDIRS = mods

scriptlibexecdir = $(libexecdir)/singularity

dist_scriptlibexec_SCRIPTS = functions sapprun.exec \
	build.exec build.help build.summary \
	check.exec check.help check.summary \
	delete.exec delete.help delete.summary \
	list.exec list.help list.summary \
	help.exec help.help help.summary \
	install.exec install.help install.summary \
	run.exec run.help run.summary \
	shell.exec shell.help shell.summary \
	specgen.exec specgen.help specgen.summary \
	strace.exec strace.help strace.summary \
	test.exec test.help test.summary

#dist_scriptlibexec_SCRIPTS = functions sapp_build sapp_build_base sapp_build_deps_libs sapp_build_archive sapp_run sapp_run_explode sapp_run_check

MAINTAINERCLEANFILES = Makefile.in

