modsdir = $(libexecdir)/singularity/bootstrap-scripts

dist_mods_SCRIPTS = deffile-driver-arch.sh \
                    deffile-driver-busybox.sh \
                    deffile-driver-debootstrap.sh \
                    deffile-driver-docker.sh \
                    deffile-driver-shub.sh \
                    deffile-driver-yum.sh \
                    deffile-scriptlets.sh \
                    env.sh \
                    post.sh \
                    pre.sh \
                    main-deffile.sh \
                    main-dockerhub.sh \
                    main-null.sh

MAINTAINERCLEANFILES = Makefile.in

