SUBDIRS = environment

modsdir = $(libexecdir)/singularity/bootstrap-scripts

dist_mods_SCRIPTS = functions checks.sh \
                    deffile-driver-arch.sh \
                    deffile-driver-busybox.sh \
                    deffile-driver-debootstrap.sh \
                    deffile-driver-docker.sh \
                    deffile-driver-localimage.sh \
                    deffile-driver-self.sh \
                    deffile-driver-shub.sh \
                    deffile-driver-yum.sh \
                    deffile-driver-zypper.sh \
                    deffile-sections.sh \
                    deffile-post.sh \
                    environment.sh \
                    post.sh \
                    pre.sh \
                    main-deffile.sh \
                    main-dockerhub.sh \
                    main-null.sh

MAINTAINERCLEANFILES = Makefile.in

