cliexecdir = $(libexecdir)/singularity/cli

dist_cliexec_SCRIPTS = action_argparser.sh \
                    apps.exec \
                    bootstrap.exec \
                    build.exec \
                    check.exec \
                    exec.exec \
                    help.exec \
                    image.exec \
                    image.create.exec \
                    image.expand.exec \
                    image.export.exec \
                    image.import.exec \
                    inspect.exec  \
                    mount.exec \
                    pull.exec \
                    run.exec \
                    shell.exec \
                    test.exec \
                    selftest.exec \
                    start.exec \
                    list.exec \
                    stop.exec \
                    stop-all.exec

dist_cliexec_DATA = singularity.help \
                    apps.help \
                    bootstrap.help \
                    build.help \
                    check.help \
                    exec.help \
                    image.help \
                    image.create.help \
                    image.expand.help \
                    image.export.help \
                    image.import.help \
                    inspect.help \
                    mount.help \
                    pull.help \
                    run.help \
                    shell.help \
                    test.help \
                    start.help \
                    list.help \
                    stop.help \
                    stop-all.help

MAINTAINERCLEANFILES = Makefile.in
