cliexecdir = $(libexecdir)/singularity/cli

dist_cliexec_SCRIPTS = action_argparser.sh \
                    apps.exec \
                    bootstrap.exec \
                    build.exec \
                    check.exec \
                    create.exec \
                    exec.exec \
                    help.exec \
                    instance.exec \
                    instance.list.exec \
                    instance.start.exec \
                    instance.stop.exec \
                    instance.stop-all.exec \
                    image.exec \
                    image.create.exec \
                    image.expand.exec \
                    image.export.exec \
                    image.import.exec \
                    inspect.exec  \
                    mount.exec \
                    pull.exec \
                    run.exec \
                    shell.exec \
                    test.exec \
                    selftest.exec

dist_cliexec_DATA = singularity.help \
                    apps.help \
                    bootstrap.help \
                    build.help \
                    check.help \
                    create.help \
                    exec.help \
                    instance.help \
                    instance.list.help \
                    instance.start.help \
                    instance.stop.help \
                    instance.stop-all.help \
                    image.help \
                    image.create.help \
                    image.expand.help \
                    image.export.help \
                    image.import.help \
                    inspect.help \
                    mount.help \
                    pull.help \
                    run.help \
                    shell.help \
                    test.help

MAINTAINERCLEANFILES = Makefile.in
