cliexecdir = $(libexecdir)/singularity/cli

dist_cliexec_SCRIPTS = action_argparser.sh \
                    apps.exec \
                    bootstrap.exec \
                    build.exec \
                    check.exec \
                    create.exec \
                    exec.exec \
                    help.exec \
                    instance.exec \
                    instance.list.exec \
                    instance.start.exec \
                    instance.stop.exec \
                    image.exec \
                    image.create.exec \
                    image.expand.exec \
                    image.export.exec \
                    image.import.exec \
                    inspect.exec  \
                    mount.exec \
                    pull.exec \
                    run.exec \
                    shell.exec \
                    test.exec \
                    selftest.exec

dist_cliexec_DATA = apps.info \
                    bootstrap.info \
                    build.info \
                    check.info \
                    create.info \
                    exec.info \
                    help.info \
                    instance.info \
                    instance.list.info \
                    instance.start.info \
                    instance.stop.info \
                    image.info \
                    image.create.info \
                    image.expand.info \
                    image.export.info \
                    image.import.info \
                    inspect.info \
                    mount.info \
                    pull.info \
                    run.info \
                    selftest.info \
                    shell.info \
                    test.info

MAINTAINERCLEANFILES = Makefile.in
