modsdir = $(libexecdir)/singularity/mods

dist_mods_SCRIPTS = sappdir_filecheck sappdir_archive sappdir_archive_meta \
	install_deps sappdir_explode install_files install_runscripts \
	build_sanity install_confs build_test sappdir_delete sappdir_check \
	sappdir_idle

#dist_scriptlibexec_SCRIPTS = functions sapp_build sapp_build_base sapp_build_deps_libs sapp_build_archive sapp_run sapp_run_explode sapp_run_check

MAINTAINERCLEANFILES = Makefile.in

