SUBDIRS = deps

modsdir = $(libexecdir)/singularity/mods

dist_mods_SCRIPTS = sappdir_filecheck sappdir_archive sappdir_metadata \
	install_deps install_files install_runscripts build_sanity install_confs \
	build_test sappdir_delete sappdir_postscript sappfile_install install_pkgs \
	post_install_check

MAINTAINERCLEANFILES = Makefile.in

