SUBDIRS = deps

modsdir = $(libexecdir)/singularity/mods

dist_mods_SCRIPTS = sappdir_filecheck sappdir_archive sappdir_metadata \
	install_file install_files install_runscripts build_sanity install_confs \
	build_test sappdir_delete sappdir_postscript sappfile_install install_pkgs \
	post_install_check build_prep build_scriptlets install_scriptlets \
	install_env

MAINTAINERCLEANFILES = Makefile.in

